# serializer version: 1
# name: test_sensor_entities[sensor.fanlinc_lamp_responding-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.fanlinc_lamp_responding',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Responding',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_EE EE EE 1_ERR',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.fanlinc_lamp_responding-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'accepted_commands': list([
        'BEEP',
        'BRT',
        'DFOF',
        'DFON',
        'DIM',
        'DOF',
        'DON',
        'FDDOWN',
        'FDSTOP',
        'FDUP',
        'OL',
        'QUERY',
        'RR',
        'WDU',
      ]),
      'accepted_commands_friendly': list([
        'Beep',
        'Brighten',
        'Dim',
        'Fade Down',
        'Fade Stop',
        'Fade Up',
        'Fast Off',
        'Fast On',
        'Off',
        'On',
        'On Level',
        'Query',
        'Ramp Rate',
        'Write Changes',
      ]),
      'friendly_name': 'FanLinc Lamp Responding',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.fanlinc_lamp_responding',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entities[sensor.garage_outlet_responding-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.garage_outlet_responding',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Responding',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_BB BB BB 1_ERR',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.garage_outlet_responding-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'accepted_commands': list([
        'BEEP',
        'DFOF',
        'DFON',
        'DOF',
        'DON',
        'QUERY',
        'WDU',
      ]),
      'accepted_commands_friendly': list([
        'Beep',
        'Fast Off',
        'Fast On',
        'Off',
        'On',
        'Query',
        'Write Changes',
      ]),
      'friendly_name': 'Garage Outlet Responding',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.garage_outlet_responding',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entities[sensor.hallway_light_responding-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hallway_light_responding',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Responding',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_AA AA AA 1_ERR',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hallway_light_responding-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'accepted_commands': list([
        'BEEP',
        'BRT',
        'DFOF',
        'DFON',
        'DIM',
        'DOF',
        'DON',
        'FDDOWN',
        'FDSTOP',
        'FDUP',
        'OL',
        'QUERY',
        'RR',
        'WDU',
      ]),
      'accepted_commands_friendly': list([
        'Beep',
        'Brighten',
        'Dim',
        'Fade Down',
        'Fade Stop',
        'Fade Up',
        'Fast Off',
        'Fast On',
        'Off',
        'On',
        'On Level',
        'Query',
        'Ramp Rate',
        'Write Changes',
      ]),
      'friendly_name': 'Hallway Light Responding',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hallway_light_responding',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entities[sensor.living_thermostat_cool_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.living_thermostat_cool_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Cool Setpoint',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_DD DD DD 1_CLISPC',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor_entities[sensor.living_thermostat_cool_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'accepted_commands': list([
        'BEEP',
        'BRT',
        'CLIFS',
        'CLIMD',
        'CLISPC',
        'CLISPH',
        'DIM',
        'QUERY',
        'SETTIME',
        'WDU',
      ]),
      'accepted_commands_friendly': list([
        'Beep',
        'Cool Setpoint',
        'Fan Mode',
        'Heat Setpoint',
        'Mode',
        'Query',
        'Set Time',
        'Setpoint Down',
        'Setpoint Up',
        'Write Changes',
      ]),
      'device_class': 'temperature',
      'friendly_name': 'Living Thermostat Cool Setpoint',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_thermostat_cool_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.4',
  })
# ---
# name: test_sensor_entities[sensor.living_thermostat_heat_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.living_thermostat_heat_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Heat Setpoint',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_DD DD DD 1_CLISPH',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor_entities[sensor.living_thermostat_heat_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'accepted_commands': list([
        'BEEP',
        'BRT',
        'CLIFS',
        'CLIMD',
        'CLISPC',
        'CLISPH',
        'DIM',
        'QUERY',
        'SETTIME',
        'WDU',
      ]),
      'accepted_commands_friendly': list([
        'Beep',
        'Cool Setpoint',
        'Fan Mode',
        'Heat Setpoint',
        'Mode',
        'Query',
        'Set Time',
        'Setpoint Down',
        'Setpoint Up',
        'Write Changes',
      ]),
      'device_class': 'temperature',
      'friendly_name': 'Living Thermostat Heat Setpoint',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_thermostat_heat_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_sensor_entities[sensor.living_thermostat_responding-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.living_thermostat_responding',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Responding',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_DD DD DD 1_ERR',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.living_thermostat_responding-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'accepted_commands': list([
        'BEEP',
        'BRT',
        'CLIFS',
        'CLIMD',
        'CLISPC',
        'CLISPH',
        'DIM',
        'QUERY',
        'SETTIME',
        'WDU',
      ]),
      'accepted_commands_friendly': list([
        'Beep',
        'Cool Setpoint',
        'Fan Mode',
        'Heat Setpoint',
        'Mode',
        'Query',
        'Set Time',
        'Setpoint Down',
        'Setpoint Up',
        'Write Changes',
      ]),
      'friendly_name': 'Living Thermostat Responding',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_thermostat_responding',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
